Fix: error handle/bot response gpt response and human_readable_text added to message. added history and changed styles

--- a/src/components/chat/style.module.scss
+++ b/src/components/chat/style.module.scss
@@ -66,6 +66,7 @@
 
   &__chat-contnet {
     padding: 2rem;
+    margin-bottom: 13rem;
   }
   &__form {
     padding: 2rem;
@@ -73,6 +74,7 @@
     bottom: 7rem;
     display: flex;
     width: 100%;
+    background-color: white;
     button {
       margin-left: 1rem;
     }
